Fix carousel background on Safari

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -77,7 +77,7 @@
 
 .slick-next
   &:before
-    background linear-gradient(to left, #fffa, #fff8 50%, transparent)
+    background linear-gradient(to left, #fffa, #fff8 50%, #fff0)
   &:after
     background url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%2329a1ff' d='M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z'%3E%3C/path%3E%3C/svg%3E") 80% center / 40% no-repeat
 
@@ -85,7 +85,7 @@
 
 .slick-prev
   &:before
-    background linear-gradient(to right, #fffa, #fff8, transparent)
+    background linear-gradient(to right, #fffa, #fff8, #fff0)
   &:after
     background url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%2329a1ff' d='M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z'%3E%3C/path%3E%3C/svg%3E") 20% center / 40% no-repeat
 
@@ -93,7 +93,7 @@
 
 .slick-dark .slick-next
   &:before
-    background linear-gradient(to left, #000a, #0008 50%, transparent)
+    background linear-gradient(to left, #000a, #0008 50%, #0000)
   &:after
     background url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%23eeeeee' d='M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z'%3E%3C/path%3E%3C/svg%3E") 80% center / 40% no-repeat
 
@@ -101,7 +101,7 @@
 
 .slick-dark .slick-prev
   &:before
-    background linear-gradient(to right, #000a, #0008, transparent)
+    background linear-gradient(to right, #000a, #0008, #0000)
   &:after
     background url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='%23eeeeee' d='M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z'%3E%3C/path%3E%3C/svg%3E") 20% center / 40% no-repeat
 
